test/features/errors/control_flow/e1105_invalid_control_flow.spl
# E1105: Invalid Control Flow

Feature: E1105 - Invalid Control Flow
  As a Simple compiler
  I want to detect invalid control flow in specific contexts
  So that control flow statements are used appropriately

  Background:
    Given I have the Simple compiler

  Scenario: Break with value in non-loop context
    When I compile:
      '''
      fn test():
        val result = break 42  # Error: break outside loop
      '''
    Then I should see error E1105 or E1101
    And the error message should contain "invalid control flow"

  Scenario: Yield in non-generator function
    When I compile:
      '''
      fn test():
        yield 42  # Error: yield outside generator (might be E1057)
      '''
    Then I should see error E1057 or E1105

  Scenario: Continue in finally block (if supported)
    When I compile:
      '''
      fn test():
        for i in 0..10:
          try:
            # code
          finally:
            continue  # Error: continue not allowed in finally
      '''
    Then I should see error E1105

  Scenario: Invalid control flow in const context
    When I compile:
      '''
      val COMPUTED: i32 = {
        for i in 0..10:  # Error: loops not allowed in const
          # body
        42
      }
      '''
    Then I should see error E1105 or E1060

  Scenario: Valid loop control flow
    When I compile:
      '''
      fn test():
        for i in 0..10:
          if i == 5:
            break
          if i % 2 == 0:
            continue
      '''
    Then compilation should succeed

  Scenario: Valid function return
    When I compile:
      '''
      fn test() -> i32:
        if true:
          return 42
        0
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val x = break
      '''
    Then I should see error E1105 or E1101
    And the error message should contain "잘못된 제어 흐름" or "루프 외부"
